<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.notima.api.webpay</groupId>
	<artifactId>pmt-admin-api</artifactId>
	<packaging>bundle</packaging>
	<version>2.2.0-SNAPSHOT</version>
	<name>Svea Webpay Payment Admin API</name>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<retrofit.version>2.9.0</retrofit.version>
		<gson.version>2.11.0</gson.version>		
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.squareup.retrofit2</groupId>
			<artifactId>retrofit</artifactId>
			<version>${retrofit.version}</version>
		</dependency>

		<dependency>
			<groupId>com.squareup.retrofit2</groupId>
			<artifactId>converter-scalars</artifactId>
			<version>${retrofit.version}</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${gson.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.36</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.36</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-configuration2</artifactId>
			<version>2.9.0</version>
		</dependency>

		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.4</version>
		</dependency>
		
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.1</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>5.10.1</version>
			<scope>test</scope>
		</dependency>
		
	</dependencies>

<build>

		<resources>
			<resource>
				<directory>src/test/resources</directory>
				<excludes>
					<exclude>config-test*</exclude>
					<exclude>test-details.properties</exclude>
					<exclude>test-credentials.properties</exclude>
					<exclude>order-test.json</exclude>
					<exclude>test-order-suite*</exclude>
				</excludes>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.13</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
					<stagingProgressTimeoutMinutes>20</stagingProgressTimeoutMinutes>
					<keepStagingRepositoryOnCloseRuleFailure>true</keepStagingRepositoryOnCloseRuleFailure>
					<keepStagingRepositoryOnFailure>true</keepStagingRepositoryOnFailure>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<includes>
						<include>**/AllTests.java</include>
					</includes>
					<!-- Below test(s) should only be run intentionally -->
					<excludes>
						<exclude>**/TestDeliverOrder.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<!-- verify if it should be signed, deploy when snapshot -->						
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>5.1.8</version>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Export-Package>
							org.notima.api.webpay.pmtapi,
							org.notima.api.webpay.pmtapi.entity,
							org.notima.api.webpay.pmtapi.exception
						</Export-Package>
						<Import-Package>
							org.slf4j,
							javax.net.*
						</Import-Package>
						<Embed-Dependency>*;scope=compile|runtime;artifactId=!slf4j-api|slf4j-log4j12|log4j|junit</Embed-Dependency>
						<Embed-Transitive>true</Embed-Transitive>						
					</instructions>
				</configuration>
			</plugin>

			<!-- Create jar with dependencies: mvn package assembly:single -->
			
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>


		</plugins>
</build>  
	
	<organization>
		<name>Ekonomibolaget Notima AB</name>
		<url>https://github.com/notima/svea-pmt-admin-api</url>
	</organization>
	<description>Library for talking to https://paymentadminapi.svea.com/api</description>
	
	<scm>
		<url>https://github.com/notima/svea-pmt-admin-api</url>
		<connection>scm:git:git://github.com/notima/svea-pmt-admin-api.git</connection>
		<developerConnection>Daniel Tamm</developerConnection>
	</scm>
	<issueManagement>
  	<url>https://github.com/notima/svea-pmt-admin-api/issues</url>
  	<system>Github Issues</system>
  </issueManagement>
  <inceptionYear>2017</inceptionYear>
  <url>https://github.com/notima/svea-pmt-admin-api</url>
  
  	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
  
	<developers>
		<developer>
			<name>Daniel Tamm</name>
			<email>daniel@notima.se</email>
			<organization>Ekonomibolaget Notima AB</organization>
			<organizationUrl>https://github.com/notima</organizationUrl>
		</developer>
	</developers>
	
</project>